ANJO-OVERFLOW-FIX

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,7 +3,6 @@ body,
 div#root {
   height: 100%;
   box-sizing: border-box;
-  overflow-x: hidden;
 }
 
 div#root {
